# fleet-protocol-http-client-cxx

./: .gitignore  CMakeLists.txt  README.md  generated-code.patch  openapi.yaml  regen.sh
.openapi-generator/: FILES
cmake/: Dependencies.cmake
example/: CMakeLists.txt  main.cpp
include/: FleetApiClient.hpp  RequestFrequencyGuard.hpp
include/CppRestOpenAPIClient/: ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
include/CppRestOpenAPIClient/api/: CarApi.h  DeviceApi.h  ModuleApi.h
include/CppRestOpenAPIClient/model/: AvailableDevices.h  Car.h  DeviceId.h  Message.h  Module.h  Payload.h  Payload_data.h
include/bringauto/fleet_protocol/http_client/: FleetApiClient.hpp  RequestFrequencyGuard.hpp
include/bringauto/fleet_protocol/http_client/settings/: Constants.hpp
lib/Cpp-rest-openapi-client/: README.md
lib/Cpp-rest-openapi-client/.openapi-generator/: FILES
lib/Cpp-rest-openapi-client/include/CppRestOpenAPIClient/: ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
lib/Cpp-rest-openapi-client/include/CppRestOpenAPIClient/api/: CarApi.h  DeviceApi.h  LoginApi.h  ModuleApi.h
lib/Cpp-rest-openapi-client/include/CppRestOpenAPIClient/model/: AvailableDevices.h  Car.h  DeviceId.h  Message.h  Module.h  Payload.h  Payload_data.h
lib/Cpp-rest-openapi-client/src/: ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
lib/Cpp-rest-openapi-client/src/api/: CarApi.cpp  DeviceApi.cpp  LoginApi.cpp  ModuleApi.cpp
lib/Cpp-rest-openapi-client/src/model/: AvailableDevices.cpp  Car.cpp  DeviceId.cpp  Message.cpp  Module.cpp  Payload.cpp  Payload_data.cpp
lib/bringauto-fleet-http-client-generated/: .openapi-generator-ignore  CMakeLists.txt  README.md
lib/bringauto-fleet-http-client-generated/.openapi-generator/: FILES
lib/bringauto-fleet-http-client-generated/include/bringauto-fleet-http-client-generated/: ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
lib/bringauto-fleet-http-client-generated/include/bringauto-fleet-http-client-generated/api/: CarApi.h  DeviceApi.h  LoginApi.h  ModuleApi.h
lib/bringauto-fleet-http-client-generated/include/bringauto-fleet-http-client-generated/model/: AvailableDevices.h  Car.h  DeviceId.h  Message.h  Module.h  Payload.h  Payload_data.h
lib/bringauto-fleet-http-client-generated/src/: ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
lib/bringauto-fleet-http-client-generated/src/api/: CarApi.cpp  DeviceApi.cpp  LoginApi.cpp  ModuleApi.cpp
lib/bringauto-fleet-http-client-generated/src/model/: AvailableDevices.cpp  Car.cpp  DeviceId.cpp  Message.cpp  Module.cpp  Payload.cpp  Payload_data.cpp
openapi/: README.md  generated-code.patch
src/: ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  FleetApiClient.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp  RequestFrequencyGuard.cpp
src/api/: CarApi.cpp  DeviceApi.cpp  ModuleApi.cpp
src/bringauto/fleet_protocol/http_client/: FleetApiClient.cpp  RequestFrequencyGuard.cpp
src/model/: AvailableDevices.cpp  Car.cpp  DeviceId.cpp  Message.cpp  Module.cpp  Payload.cpp  Payload_data.cpp
test/: CMakeLists.txt  README.md  main.cpp
test/include/: RequestFrequencyGuardTests.hpp  TestConstants.hpp
test/lib/memory_management/: CMakeLists.txt
test/lib/memory_management/source/: memory_management.cpp
test/src/: FleetApiClient.cpp  FleetApiClientTests.cpp  RequestFrequencyGuardTests.cpp
